# File-Microservice-FastAPI

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pre-commit-config.yaml  pyproject.toml
entrypoints/: file-app-entrypoint.sh
src/application/common/: i_storage_client.py  i_unit_of_work.py
src/application/exceptions/: authentication_exceptions.py  core_exception.py  file_exceptions.py
src/application/irepos/: i_file_repo.py
src/application/use_cases/: get_file_url.py  remove_file.py  update_file.py  upload_file.py
src/core/: config.py  containers.py
src/domain/entities/: file.py
src/infrastructure/storage_client/: storage_client.py
src/presentation/: exception_handler.py  main.py
src/presentation/api/: authentication_dependencies.py  router.py
src/presentation/api/endpoints/: files.py
