[tool.poetry]
name = "file-service"
version = "0.1.0"
description = "s3 storage for files"
authors = ["n1trogen <antoha323245@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
dependency-injector = "^4.47.1"
aioboto3 = "^14.3.0"
uvicorn = "^0.34.3"
pyjwt = "^2.10.1"
pre-commit = "^4.2.0"
pydantic = "^2.11.5"
pydantic-settings = "^2.9.1"
python-multipart = "^0.0.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
